# rusThello

./: .gitignore  Cargo.toml  README.md
book/: compose.cpp  run.sh  xxx_composed.csv
ffotest/: end40.pos
model/: stage1.txt  stage10.txt  stage11.txt  stage12.txt  stage13.txt  stage14.txt  stage2.txt  stage3.txt  stage4.txt  stage5.txt  stage6.txt  stage7.txt  stage8.txt  stage9.txt
model_raw/: stage1.txt  stage10.txt  stage11.txt  stage12.txt  stage2.txt  stage3.txt  stage4.txt  stage5.txt  stage6.txt  stage7.txt  stage8.txt  stage9.txt
src/: arg.rs  book.rs  color.rs  command_nom.rs  command_parser.rs  eval.rs  eval_fun.rs  global.rs  hash.rs  lib.rs  main  main.rs  make_train_data.rs  play.rs  print.rs  rotate.rs  solver.rs  temp.cpp  think.rs  train.rs
train/: .gitignore  pre_train_data.cpp  run.sh
