[package]
name = "rusThello"
version = "0.1.0"
authors = ["unonao <naokiuno634@gmail.com>"]
edition = "2018"
description = "Clap Example CLI"

[dependencies]
nom = "5"
rand = "0.7"
lazy_static = "1.3.0"
clap = "2.33.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
flate2 = "1.0"
